--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
+  - 2.0.0
   - 2.1
   - 2.2
-  - 2.3
+  - 2.3.0
+  - ruby-head
+before_install: gem update bundler
 script: bundle exec rake test
