Update travis.yml: allow_failures ruby-head
Signed-off-by: Youhei SASAKI <uwabami@gfd-dennou.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,8 @@ rvm:
   - 2.2
   - 2.3.0
   - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
 before_install: gem update bundler
 script: bundle exec rake test
