Use RSpec instead of Test::Unit
Signed-off-by: Youhei SASAKI <uwabami@gfd-dennou.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ matrix:
     - rvm: ruby-head
 before_install:
   - gem update bundler
-script: bundle exec rake test
+script: bundle exec rake spec
