--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ sudo: false
 cache:
   bundler: true
 rvm:
-  - 2.1
   - 2.2
-  - 2.3.0
+  - 2.3
+  - 2.4
+  - 2.5
   - ruby-head
 matrix:
   allow_failures:
     - rvm: ruby-head
-before_install:
-  - gem update bundler
+before_install: gem update bundler
 script: bundle exec rake spec
